# camera_node

./: .gitignore  CMakeLists.txt  README.md  mainpage.dox  manifest.xml
include/: CameraNode.h
src/: GraphUtils.c  calibrate.cpp  featuretracker.h  filter.cpp  opencv_cam.cpp
src/test/: calibrate_node.h  disparity_node.h  disparity_view.cpp  stereocamera.cpp  stereocamera.h
